# percolate

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: rust_auto_format.yml
src/: handles.rs  lib.rs  peek_stream.rs  predicate.rs  projection.rs  stream.rs
src/projection/: async_mut.rs  fused_blocking_mut.rs  fused_mut_blocking_mut.rs  fused_ref_blocking_mut.rs  mod.rs
src/stream/: peek_stream.rs
