[package]
name = "percolate"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Yet another futures utility library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/percolate"
homepage = "https://github.com/Tamschi/percolate/tree/v0.0.1"
documentation = "https://docs.rs/percolate/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/percolate" }
is-it-maintained-open-issues = { repository = "Tamschi/percolate" }
maintenance = { status = "experimental" }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
pollster = "0.2.4"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.23"

[dependencies]
ergo-pin = "0.1.0"
futures-core = { version = "0.3.15", default-features = false }
futures-util = { version = "0.3.15", default-features = false }
pin-project = "1.0.7"
tap = "1.0.1"
